--- a/index.html
+++ b/index.html
@@ -50,11 +50,38 @@
                     <a href="" class="header-btn">Buy Now</a>
                 </div>
                 <div class="grouped-img">
+                    <svg width="365" height="353" viewBox="0 0 365 353" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <ellipse opacity="0.1" cx="182.499" cy="176.5" rx="182.5" ry="176.5" fill="#D23166"/>
+                    </svg>
                     <img src="./images/ice-cream.png" alt="Ice Cream" class="ice-cream">
                     <img src="./images/milk.png" alt="Milk Splash" class="milk-splash">
                 </div>
             </div>
         </section>
+    </section>
+    <section class="info container">
+        <div class="info-content">
+            <div class="info-item">
+                <img src="./images/Truck.png" alt="" class="img-info">
+                <h3 class="info-title">Free Shipping</h3>
+                <p class="info-text">Last Chance! Free shipping on all orders ends today.</p>
+            </div>
+            <div class="info-item">
+                <img src="./images/Cocktail.png" alt="" class="img-info">
+                <h3 class="info-title">Quick Packaging</h3>
+                <p class="info-text">Last Chance! Free shipping on all orders ends today.</p>
+            </div>
+            <div class="info-item">
+                <img src="./images/cash-back.png" alt="" class="img-info">
+                <h3 class="info-title">100% Money Back</h3>
+                <p class="info-text">Last Chance! Free shipping on all orders ends today.</p>
+            </div>
+            <div class="info-item">
+                <img src="./images/fast-delivery.png" alt="" class="img-info">
+                <h3 class="info-title">Fast Delivery</h3>
+                <p class="info-text">Last Chance! Free shipping on all orders ends today.</p>
+            </div>
+        </div>    
     </section>
 </body>
 
