--- a/index.html
+++ b/index.html
@@ -45,13 +45,14 @@
                         Feel inside cold with <br> our delicious <span class="word">ice-cream.</span>
                     </h1>
                     <p class="intro-text">
-                        Some food has looked so awful that it's looked like something that the dog's brought home, yet after one mouthful I've been left eating my thoughts, my words.
+                        Some food has looked so awful that it's looked like something that the dog's brought home, yet
+                        after one mouthful I've been left eating my thoughts, my words.
                     </p>
                     <a href="" class="header-btn">Buy Now</a>
                 </div>
                 <div class="grouped-img">
                     <svg width="365" height="353" viewBox="0 0 365 353" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <ellipse opacity="0.1" cx="182.499" cy="176.5" rx="182.5" ry="176.5" fill="#D23166"/>
+                        <ellipse opacity="0.1" cx="182.499" cy="176.5" rx="182.5" ry="176.5" fill="#D23166" />
                     </svg>
                     <img src="./images/ice-cream.png" alt="Ice Cream" class="ice-cream">
                     <img src="./images/milk.png" alt="Milk Splash" class="milk-splash">
@@ -81,7 +82,18 @@
                 <h3 class="info-title">Fast Delivery</h3>
                 <p class="info-text">Last Chance! Free shipping on all orders ends today.</p>
             </div>
-        </div>    
+        </div>
+    </section>
+    <section class="info-detail">
+        <div class="detail-content">
+            <div class="detail-item">
+                <h2 class="detail-title">Brown Sugar Oatmea</h2>
+                <p class="detail-text">Together with McDonald’s, Burger King has grown to become synonymous with
+                    burgers in the US.Together with McDonald’s, Burger King has grown to become synonymous.</p>
+                <a href="" class="detail-btn">See Details</a>
+            </div>
+            <img src="./images/ice-cream-2.png" alt="" class="ice-cream-2">
+        </div>
     </section>
 </body>
 
