--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         </div>
     </section>
     <section class="info-detail">
-        <div class="detail-content">
+        <div class="detail-content container">
             <div class="detail-item">
                 <h2 class="detail-title">Brown Sugar Oatmea</h2>
                 <p class="detail-text">Together with McDonald’s, Burger King has grown to become synonymous with
